--- a/style.css
+++ b/style.css
@@ -1,1 +1,107 @@
-/* TODO */
+* {
+  font-family: "Noto sans", sans-serif;
+  box-sizing: border-box;
+}
+
+body {
+  padding: 8px;
+  background: #212121;
+  color: #ffffff;
+}
+
+input {
+  height: 40px;
+  border: 0px solid gray;
+  border-radius: 15px;
+  width: 325px;
+  background: #323232;
+  display: table-cell;
+  text-align: center;
+  color: #FFF;
+font-size: 17px;
+display: inline-block;
+padding-left: 10px;
+padding-right: 10px;
+}
+
+button {
+  height: 40px;
+  border: 0px solid gray;
+  border-radius: 15px;
+  width: 80px;
+  background: #434343;
+  display: table-cell;
+  text-align: center;
+  color: #777;
+font-size: 17px;
+display: inline-block;
+}
+
+p {
+  color: #777;
+  font-size: 17px;
+}
+
+.error {
+  color: #FF0000;
+  font-weight: bold;
+}
+
+.top-left {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  padding: 20px;
+}
+
+.name {
+  font-size: 22px;
+}
+
+.version {
+  font: bold 14px monospace;
+}
+
+.top-right {
+  position: fixed;
+  top: 10px;
+  right: 0px;
+  padding: 5px 10px;
+  display: flex;
+  gap: 15px;
+}
+
+.center {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  align-items: center;
+}
+
+svg {
+  color: white;
+  filter: brightness(0) invert(1);
+  margin: 1px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  transition: transform 250ms;
+}
+
+svg:hover {
+  transform: scale(1.2);
+}
+
+#move {
+  cursor: move;
+}
+
+::placeholder {
+  color: #777;
+}
